* undo "URL" -> "URI" change. * add "fastq" handling in babraham plugins